--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -77,6 +77,13 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: "1.18"
+          
+      - uses: actions/cache@v2
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
 
       - name: Build Sling (Linux)
         if: runner.os == 'linux'
