--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -5,7 +5,7 @@ on: [push]
 jobs:
   build:
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
 
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +24,7 @@ jobs:
 
     needs: [build]
 
-    runs-on: self-hosted
+    runs-on: [self-hosted, linux]
 
     steps:
       - uses: actions/checkout@v2
