--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -20,7 +20,7 @@ jobs:
           rm -rf $WORK_FOLDER
 
   test:
-    if: "! contains(github.event.head_commit.message, '[skip ci]')"
+    if: "! (contains(github.event.head_commit.message, '[skip ci]') || contains(github.event.head_commit.message, '[no test]'))"
 
     needs: [build]
 
