--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -12,7 +12,7 @@ jobs:
         uses: lewagon/wait-on-check-action@v1.0.0
         with:
           ref: ${{ github.ref }}
-          check-name: 'Bump version and push tag'
+          check-name: bump
           repo-token: ${{ secrets.GITHUB_TOKEN }}
           wait-interval: 10
 
