--- a/.github/workflows/bumper.yml
+++ b/.github/workflows/bumper.yml
@@ -25,10 +25,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Set Payload
+        env:
+          VERSION: ${{ steps.tag_version.outputs.new_tag }}
+        run: |
+          echo "VERSION -> $VERSION"
+          export PAYLOAD="{\"version\": \"$VERSION\"}"
+          echo "PAYLOAD -> $PAYLOAD"
+          
       - name: Trigger Build & Test
         uses: peter-evans/repository-dispatch@v2
         with:
           token: ${{ secrets.REPO_ACCESS_TOKEN }}
           repository: slingdata-io/sling-cli
           event-type: build-test
-          client-payload: '{"version": "${{ steps.tag_version.outputs.new_tag }}"}'
+          client-payload: "{\"version\": \"${{ steps.tag_version.outputs.new_tag }}\"}"
