--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -4,6 +4,9 @@ on:
   workflow_dispatch:
   repository_dispatch:
     types: [build-test]
+  push:
+    tags:
+      - 'v*.*.*'
 
 jobs:
   build:
@@ -26,14 +29,14 @@ jobs:
           REF_NAME: ${{ github.ref_name }}
         
         run: |
-          echo "REF_NAME -> $REF_NAME"
           echo "VERSION -> $VERSION"
-          
+          echo "REF_NAME -> $REF_NAME"
+
           bash scripts/prep.gomod.sh
           export WORK_FOLDER=/__/work/${GITHUB_RUN_NUMBER}
           mkdir -p $WORK_FOLDER
           cp -r . $WORK_FOLDER/sling
-          docker run --rm -e VERSION -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh
+          docker run --rm -e VERSION=$REF_NAME -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh
           rm -rf $WORK_FOLDER
           /tmp/sling-linux
 
