--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -25,7 +25,7 @@ jobs:
         env:
           # VERSION: ${{ steps.get_version.outputs.VERSION }}
           # VERSION: ${{ github.event.client_payload.version }}
-          VERSION: ${{ ${{ needs.bump.outputs.new_tag }} }}
+          VERSION: ${{ needs.bump.outputs.new_tag }}
           REF_NAME: ${{ github.ref_name }}
         
         run: |
