--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -15,6 +15,7 @@ jobs:
   build:
     if: "! contains(github.event.head_commit.message, '[skip ci]')"
     runs-on: [self-hosted, linux]
+    needs: [bump]
 
     steps:
       - uses: actions/checkout@v2
