--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -32,12 +32,14 @@ jobs:
         run: |
           echo "VERSION -> $VERSION"
           echo "REF_NAME -> $REF_NAME"
+          echo "GIT_TAG=`echo $(git describe --tags --abbrev=0)`" >> $VERSION
+          echo "VERSION -> $VERSION"
 
           bash scripts/prep.gomod.sh
           export WORK_FOLDER=/__/work/${GITHUB_RUN_NUMBER}
           mkdir -p $WORK_FOLDER
           cp -r . $WORK_FOLDER/sling
-          docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh
+          docker run --rm -e VERSION=$VERSION -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base VERSION=$VERSION bash scripts/build.linux.sh
           rm -rf $WORK_FOLDER
           /tmp/sling-linux
 
