update ldflags [no test]

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -26,12 +26,13 @@ jobs:
         env:
           # VERSION: ${{ steps.get_version.outputs.VERSION }}
           # VERSION: ${{ github.event.client_payload.version }}
-          VERSION: ${{ needs.bump.outputs.new_tag }}
+          VERSION: ${{ needs.bump.outputs.new_version }}
           REF_NAME: ${{ github.ref_name }}
         
         run: |
           echo "VERSION -> $VERSION"
           echo "REF_NAME -> $REF_NAME"
+          echo "TAG -> $(git describe --tags --abbrev=0)"
 
           bash scripts/prep.gomod.sh
           export WORK_FOLDER=/__/work/${GITHUB_RUN_NUMBER}
