--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: [self-hosted, linux]
 
     outputs:
-      version: ${{ steps.step1.outputs.version }}
+      VERSION: ${{ steps.get_version.outputs.VERSION }}
 
     steps:
       - uses: actions/checkout@v2
@@ -97,19 +97,19 @@ jobs:
 
       - name: Build Sling (Linux)
         env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          VERSION: ${{ needs.build.outputs.VERSION }}
         if: runner.os == 'linux'
         run: bash scripts/ci/build.linux.sh $VERSION
 
       - name: Build Sling (Mac)
         env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          VERSION: ${{ needs.build.outputs.VERSION }}
         if: runner.os == 'macOS'
         run: bash scripts/ci/build.mac.sh $VERSION
 
       - name: Build Sling (Windows)
         env:
-          VERSION: ${{ steps.get_version.outputs.VERSION }}
+          VERSION: ${{ needs.build.outputs.VERSION }}
         if: runner.os == 'windows'
         run: .\scripts\ci\build.win.ps1 $VERSION
 
