add if to release [skip ci]

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -65,6 +65,7 @@ jobs:
           docker image rm -f flarco/sling:$VERSION
 
   release:
+    if: "! (contains(github.event.inputs.build_only, 'true'))"
     needs: [build]
     runs-on: ${{ matrix.runner }}
 
