--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -56,13 +56,13 @@ jobs:
 
           source /__/devbox/.env.sh
           export _DEBUG=''
-          echo "$DOCKER_PASSWORD" | docker login -u flarco --password-stdin
+          echo "$DOCKER_PASSWORD!" | docker login -u slingdata --password-stdin
 
-          docker build -t flarco/sling:$VERSION -f cmd/sling/Dockerfile .
-          docker tag flarco/sling:$VERSION flarco/sling:latest
-          docker push flarco/sling:$VERSION
-          docker push flarco/sling:latest
-          docker image rm -f flarco/sling:$VERSION
+          docker build -t slingdata/sling:$VERSION -f cmd/sling/Dockerfile .
+          docker tag slingdata/sling:$VERSION slingdata/sling:latest
+          docker push slingdata/sling:$VERSION
+          docker push slingdata/sling:latest
+          docker image rm -f slingdata/sling:$VERSION
 
   release:
     if: "! (contains(github.event.inputs.build_only, 'true'))"
