--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -22,6 +22,18 @@ jobs:
         with:
           ref: ${{ github.event.client_payload.ref }}
 
+      - name: Set up GoLang
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.18"
+          
+      - uses: actions/cache@v3
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Build
         env:
           # VERSION: ${{ steps.get_version.outputs.VERSION }}
