--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -64,6 +64,18 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
+      - name: Set up GoLang
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.18"
+          
+      - uses: actions/cache@v3
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+
       - name: Run Go Tests
         run: |
           bash scripts/prep.gomod.sh
