update json, dbio, test

--- a/.github/workflows/build-test.yml
+++ b/.github/workflows/build-test.yml
@@ -78,4 +78,4 @@ jobs:
 
       - name: Run Go Tests
         run: |
-          docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $PWD:/work --workdir /work/sling flarco/devbox:base bash -c "bash scripts/prep.gomod.sh && source /__/devbox/.env.sh && _DEBUG='' bash scripts/test.sh"
+          docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $PWD:/work --workdir /work flarco/devbox:base bash -c "bash scripts/prep.gomod.sh && source /__/devbox/.env.sh && _DEBUG='' bash scripts/test.sh"
