--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -63,6 +63,18 @@ jobs:
     runs-on: [self-hosted, Linux]
     
     steps:
+      - name: Set up GoLang
+        uses: actions/setup-go@v3
+        with:
+          go-version: "1.18"
+          
+      - uses: actions/cache@v3
+        with:
+          path: ~/go/pkg/mod
+          key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-
+      
       - name: Push Docker
         run: |
           /bin/cp /tmp/sling-linux ./sling
