--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -51,7 +51,7 @@ jobs:
           sudo chmod -R 777 $WORK_FOLDER
 
           docker run --rm -v /__/docker-data/devbox/root/go:/root/go -v /__:/__ -v /tmp:/tmp -v $WORK_FOLDER:/work --workdir /work/sling flarco/devbox:base bash scripts/build.linux.sh $VERSION
-          sudo rm -rf $WORK_FOLDER
+          sudo rm -rf $WORK_FOLDER/sling
 
           echo $VERSION
           VERSION=$(/tmp/sling-linux --version | sed 's/Version: //')
