--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -203,6 +203,8 @@ jobs:
           args: release --rm-dist --skip-validate -f .goreleaser.mac.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
 
   release-scoop:
     runs-on: windows-latest
@@ -226,3 +228,5 @@ jobs:
           args: release --rm-dist --skip-validate -f .goreleaser.windows.yaml
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          AWS_ACCESS_KEY_ID: ${{ secrets.DO_SPACE_ACCESS_KEY}}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.DO_SPACE_SECRET_KEY}}
