--- a/.goreleaser.windows.yaml
+++ b/.goreleaser.windows.yaml
@@ -50,14 +50,14 @@ blobs:
     region: nyc3
 
 scoop:
-  - name: sling
-    bucket:
-      owner: slingdata-io
-      name: scoop-sling
-      branch: main
-    
-    url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
+  name: sling
+  bucket:
+    owner: slingdata-io
+    name: scoop-sling
+    branch: main
+  
+  url_template: "https://ocral.nyc3.digitaloceanspaces.com/slingdata.io/dist/{{ .Version }}/{{ .ArtifactName }}"
 
-    homepage: https:/slingdata.io/en/cli
+  homepage: https:/slingdata.io/en/cli
 
-    description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
+  description: "Data Integration made simple, from the command line. Extract and load data from popular data sources to destinations with high performance and ease."
