--- a/.github/workflows/release-scoop-brew.yml
+++ b/.github/workflows/release-scoop-brew.yml
@@ -14,10 +14,10 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
+      # - name: Set up Go
+      #   uses: actions/setup-go@v3
+      #   with:
+      #     go-version: 1.19
 
       - name: Run GoReleaser
         uses: goreleaser/goreleaser-action@v3
@@ -40,13 +40,13 @@ jobs:
         with:
           fetch-depth: 0
       
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.19
+      # - name: Set up Go
+      #   uses: actions/setup-go@v3
+      #   with:
+      #     go-version: 1.19
 
       - name: Run GoReleaser
-        uses: goreleaser/goreleaser-action@v3
+        uses: flarco/goreleaser-action@master
         with:
           distribution: goreleaser
           version: latest
