--- a/.github/workflows/release-scoop-brew.yml
+++ b/.github/workflows/release-scoop-brew.yml
@@ -10,9 +10,9 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
-        # with:
-        #   fetch-depth: 0
+        uses: actions/checkout@v1
+        with:
+          fetch-depth: 0
       
       - name: Set up Go
         uses: actions/setup-go@v3
@@ -46,7 +46,7 @@ jobs:
           go-version: 1.19
 
       - name: Run GoReleaser
-        uses: flarco/goreleaser-action@master
+        uses: flarco/goreleaser-action@v4
         with:
           distribution: goreleaser
           version: latest
