--- a/.github/workflows/release-scoop-brew.yml
+++ b/.github/workflows/release-scoop-brew.yml
@@ -46,7 +46,7 @@ jobs:
           go-version: 1.19
 
       - name: Run GoReleaser
-        uses: flarco/goreleaser-action@v4
+        uses: flarco/goreleaser-action@master
         with:
           distribution: goreleaser
           version: latest
