--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -99,7 +99,8 @@ jobs:
       fail-fast: true
       matrix:
         # runner: [self-hosted-mac, self-hosted-linux, self-hosted-windows]
-        runner: [macos-latest, ubuntu-18.04, windows-latest]
+        # runner: [macos-latest, ubuntu-18.04, windows-latest]
+        runner: [ubuntu-18.04, windows-latest]
 
     # doesn't work, put double quote at the end
     # env:
