--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -100,7 +100,7 @@ jobs:
       matrix:
         # runner: [self-hosted-mac, self-hosted-linux, self-hosted-windows]
         # runner: [macos-latest, ubuntu-18.04, windows-latest]
-        runner: [ubuntu-18.04, windows-latest]
+        runner: [mbp-sling-arm64, ubuntu-18.04, windows-latest]
 
     # doesn't work, put double quote at the end
     # env:
